Fix weird spacing on latex elements

--- a/_includes/readable.css
+++ b/_includes/readable.css
@@ -66,8 +66,7 @@ pre,
 blockquote,
 figure,
 .wp-caption {
-  margin: -10px -10px 20px -10px;
-  padding: 10px;
+  margin: 0px -10px 20px -10px;
   border-radius: 5px;
 }
 
